--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,13 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal 'tmux-256color'
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+
+bind R source-file ~/.tmux.conf
 
 # TODO: Switch this to TPM (https://github.com/christoomey/vim-tmux-navigator#tpm)
 # Smart pane switching with awareness of Vim splits.
