Add tmux resurrect.
After losing all my tmux sessions one too many times I decided the
extra config is worth it. 😂

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "terminal/.iterm2-themes/iterm-two-firewatch"]
 	path = terminal/.iterm2-themes/iterm-two-firewatch
 	url = git@github.com:rakr/iterm-two-firewatch.git
+[submodule "tmux/.tmux/plugins/tpm"]
+	path = tmux/.tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
