--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,6 +35,7 @@ set -g status-right ''
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'iterm,fullscreen'
