--- a/bash/.env
+++ b/bash/.env
@@ -1,6 +1,11 @@
-export PATH="$HOME/.bin:$GEM_HOME/bin:node_modules/.bin:$PATH"
-export PATH="$HOME/.cargo/bin:$PATH"
-
 eval "$(nodenv init -)"
+if command -v pyenv > /dev/null; then eval "$(pyenv init -)"; fi
 eval "$(rbenv init -)"
+
+# PERSONAL_PATH="./.git/trusted/../../bin:$HOME/.bin"
+
+GLOBAL_PATH="$HOME/.bin:$HOME/.bin/node_modules/.bin"
+PACKAGE_MANAGER_PATH="$GEM_HOME/bin:node_modules/.bin:$HOME/.cargo/bin"
+export PATH="$PACKAGE_MANAGER_PATH:$GLOBAL_PATH:$PATH"
+
 [ -f ~/.fzf.bash ] && source ~/.fzf.bash
