--- a/stow-bash/.env
+++ b/stow-bash/.env
@@ -1,11 +1,15 @@
 eval "$(nodenv init -)"
 if command -v pyenv > /dev/null; then eval "$(pyenv init -)"; fi
 eval "$(rbenv init -)"
+. "$HOME/.cargo/env"
+
+export RUBY_CONFIGURE_OPTS="--with-openssl-dir=$(brew --prefix openssl@1.1)"
+export LDFLAGS="-L/usr/local/opt/bison/lib"
 
 # PERSONAL_PATH="./.git/trusted/../../bin:$HOME/.bin"
 
 GLOBAL_PATH="$HOME/.bin:$HOME/.bin/node_modules/.bin"
-PACKAGE_MANAGER_PATH="$GEM_HOME/bin:node_modules/.bin:$HOME/.cargo/bin"
+PACKAGE_MANAGER_PATH="$GEM_HOME/bin:node_modules/.bin:$HOME/.cargo/bin:$HOME/.local/share/solana/install/active_release/bin"
 export PATH="$PACKAGE_MANAGER_PATH:$GLOBAL_PATH:$PATH"
 
-[ -f ~/.fzf.bash ] && source ~/.fzf.bash
+test -e "$HOME/.transient-env" && . "$HOME/.transient-env"
