--- a/stow-tmux/.tmux.conf
+++ b/stow-tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal 'tmux-256color'
+# set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # vim mode
