Fix gpg error found when using git.
gpg: signing failed: Inappropriate ioctl for device

--- a/stow-shell-config/.env
+++ b/stow-shell-config/.env
@@ -5,6 +5,8 @@ eval "$(rbenv init -)"
 export RUBY_CONFIGURE_OPTS="--with-openssl-dir=$(brew --prefix openssl@1.1)"
 export LDFLAGS="-L/usr/local/opt/bison/lib"
 
+export GPG_TTY=$(tty)
+
 # PERSONAL_PATH="./.git/trusted/../../bin:$HOME/.bin"
 
 GLOBAL_PATH="$HOME/.bin:$HOME/.bin/node_modules/.bin"
