--- a/stow-git/.gitconfig
+++ b/stow-git/.gitconfig
@@ -63,3 +63,7 @@
 	autoupdate = true
 [push]
 	default = current
+[credential "https://github.com"]
+	helper = !/opt/homebrew/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = !/opt/homebrew/bin/gh auth git-credential
